--- a/models/index.html
+++ b/models/index.html
@@ -64,7 +64,8 @@
 				</h3>
 			</div>
 			<div class="log-in">
-				<button type="button" class="btn btn-light btn-lg">Log In</button>
+				<!-- <button type="button" class="btn btn-light btn-lg">Log In</button> -->
+        <a href="#" class="btn btn-light btn-lg" tabindex="-1" role="button" aria-disabled="true">Log In</a>
 			</div>
 		</div>
 
