adding working login buttons on all pages

--- a/Photographers/index.html
+++ b/Photographers/index.html
@@ -24,8 +24,8 @@
 					<img class="logo" src="../imgs/logoBLANK.png" alt="My Pocket Folio" />
 				</div>
 				<div class="log-in">
-					<button type="button" class="btn btn-light btn-lg">Log In</button>
-				</div>
+          <a href="../Profile/LogIn.html" class="btn btn-light btn-lg shadow p-3 mb-5 bg-body-tertiary rounded" tabindex="-1" role="button" aria-disabled="true">Log In</a>
+        </div>
 			</div>
 
 			<h1>My Pocket Portfolio</h1>
@@ -62,7 +62,7 @@
 				</h3>
 			</div>
 			<div class="log-in">
-				<button type="button" class="btn btn-light btn-lg">Log In</button>
+        <a href="../Profile/LogIn.html" class="btn btn-light btn-lg shadow p-3 mb-5 bg-body-tertiary rounded" tabindex="-1" role="button" aria-disabled="true">Log In</a>
 			</div>
 		</div>
 
