--- a/Profile/index.html
+++ b/Profile/index.html
@@ -25,8 +25,8 @@
 					<img class="logo" src="../imgs/logoBLANK.png" alt="My Pocket Folio" />
 				</div>
 				<div class="log-in">
-					<button type="button" class="btn btn-light btn-lg">Log In</button>
-				</div>
+          <a href="../Profile/LogIn.html" class="btn btn-light btn-lg shadow p-3 mb-5 bg-body-tertiary rounded" tabindex="-1" role="button" aria-disabled="true">Log In</a>
+        </div>
 			</div>
 
 			<h1>My Pocket PortFolio</h1>
@@ -57,7 +57,7 @@
 		<!-- SECTION ONE START -->
 		<div class="d-flex flex-row mb-3 holder justify-content-around">
 			<div class="connect p-2"></div>
-			<button type="button" class="btn btn-light btn-lg connect-btn">
+			<button type="button" class="btn btn-light btn-lg connect-btn shadow p-3 mb-5 bg-body-tertiary rounded">
 				Connect
 			</button>
 
