--- a/Profile/LogIn.html
+++ b/Profile/LogIn.html
@@ -33,7 +33,7 @@
 
         <!-- LOGIN FORM START -->
 
-        <form>
+        <form class="m-5">
             <div class="mb-3 p-2">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
