--- a/Profile/index.html
+++ b/Profile/index.html
@@ -34,8 +34,7 @@
 			<ul class="nav nav-tabs justify-content-center nav-fill">
 				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="./index.html"
-						>Home</a
-					>
+						>Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="../models/index.html">Models</a>
