fixing login header

--- a/Profile/LogIn.html
+++ b/Profile/LogIn.html
@@ -21,14 +21,14 @@
   <body>
 
     <header>
-        <div class="header d-flex flex-column justify-content-center">
-            <div class="p-2">
+        <div class="header d-flex flex-column mb-3 justify-content-center">
+            <div class="p-4 mb-5">
                 <img class="logo align-content-start" src="../imgs/logoBLANK.png" alt="My Pocket Folio" />
             </div>
             <div class="p-4 words">
                 <h1>My Pocket Portfolio</h1>
             </div>
-        </div>
+       </div>
     </header>
 
         <!-- LOGIN FORM START -->
