--- a/Photographers/index.html
+++ b/Photographers/index.html
@@ -32,9 +32,9 @@
 
 			<ul class="nav nav-tabs justify-content-center nav-fill">
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="../Profile/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
+					<a class="nav-link dropdown-toggle" href="../index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="../Profile/index.html">Go Home</a></li>
+            <li><a class="dropdown-item" href="../index.html">Go Home</a></li>
             <li><a class="dropdown-item" href="../Profile/connect.html">Learn how to Connect</a></li>
             <li><a class="dropdown-item" href="../Profile/LogIn.html">Log In</a></li>
           </ul>
