--- a/Profile/PersonalProfile.html
+++ b/Profile/PersonalProfile.html
@@ -33,8 +33,14 @@
     <h1>My Pocket Portfolio</h1>
 
     <ul class="nav nav-tabs justify-content-center nav-fill">
-        <li class="nav-item">
-            <a class="nav-link" href="../Profile/index.html">Home</a>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" aria-current="page" href="./index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                >Home</a>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="./index.html">Go Home</a></li>
+      <li><a class="dropdown-item" href="./connect.html">Learn how to Connect</a></li>
+      <li><a class="dropdown-item" href="./LogIn.html">Log In</a></li>
+    </ul>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="../models/index.html">Models</a>
@@ -48,12 +54,12 @@
             <a class="nav-link" href="../agencies/index.html">Agencies</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html"
-                >Packages</a
-            >
+            <a class="nav-link" href="../Packages/index.html">Packages</a>
         </li>
     </ul>
 </header>
+
+
 
 </body>
 </html> 
