--- a/Profile/connect.html
+++ b/Profile/connect.html
@@ -37,7 +37,7 @@
             <a class="nav-link dropdown-toggle active" aria-current="page" href="./index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"
                 >Home</a>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="./index.html">Go Home</a></li>
+      <li><a class="dropdown-item" href="../index.html">Go Home</a></li>
       <li><a class="dropdown-item" href="./connect.html">Learn how to Connect</a></li>
       <li><a class="dropdown-item" href="./LogIn.html">Log In</a></li>
     </ul>
